# tiktok-downloader

./: .gitignore  LICENSE  README.md  app.go  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  wails.json
.github/workflows/: build.yml
backend/: core.go  download.go  official.go  scraper.go  tikwm.go  urls.go
frontend/: components.json  index.html  package.json  package.json.md5  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: BatchPanel.tsx  HistoryPanel.tsx  OutputBar.tsx  ProfilePanel.tsx  Sidebar.tsx  TitleBar.tsx  UrlPanel.tsx
frontend/src/components/ui/: button.tsx  input.tsx  label.tsx  progress.tsx  sonner.tsx  switch.tsx
frontend/src/types/: api.ts
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
tiktok_downloader/: __init__.py  cli.py  core.py  downloader.py  official_api.py  scraper.py  tikwm_hd.py  urls.py
